--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 #Bloco_Info{
-    background-color: #f9f9f9;
+    background-color: #ebe9e9;
     padding-left: 10%;
     padding-right: 10%;
     padding-top: 2%;
